# function_calling

./: Readme.md  logx_entry.py  main.py  pyproject.toml
docs/: log-model.txt
src/function_calling/: Qwen.py  __init__.py
src/function_calling/logx/: __init__.py  cli.py  grepper.py  gui.py  llm.py
src/function_calling/util/: function.py
tests/: test_analyze.py  test_zgrep.py
