[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logx"
version = "0.1.0"
description = "Offline log search for local archives"
readme = "Readme.md"
requires-python = ">=3.9"

[project.scripts]
logx = "function_calling.logx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
